# chat-program

./: CMakeLists.txt
client/: chat_client.c
include/chat/: message.c  message.h  ui.c  ui.h
include/data/: model.h  protocol.c  protocol.h
server/: chat_server.c
